include/wirelab/wirelab_ffi.h

  /* Borrowed UTF-8. Not NUL-terminated; always use len. */
  typedef struct
  {
    const char* ptr;
    size_t len;
  } wirelab_str;
  /* ---- static tables --------------------------------------------------- */
  /* Process-lifetime storage; safe to hold indefinitely. An out-of-range index
   * yields an empty string rather than a trap. */

  size_t wirelab_backend_count(void);
  wirelab_str wirelab_backend_name(size_t index);
  size_t wirelab_scenario_count(void);
  wirelab_str wirelab_scenario_name(size_t index);
  size_t wirelab_anomaly_type_count(void);
  wirelab_str wirelab_anomaly_type_name(size_t index);
  size_t wirelab_policy_action_name_count(void);
  wirelab_str wirelab_policy_action_name(size_t index);
  wirelab_str wirelab_node_type_label(uint32_t node_type);
  wirelab_str wirelab_classification_label(uint32_t classification);
  wirelab_str wirelab_validity_label(uint32_t validity);
  wirelab_str wirelab_anomaly_type_label(uint32_t anomaly_type);
  wirelab_str wirelab_policy_action_label(uint32_t action);
  wirelab_str wirelab_enforcement_kind_label(uint32_t kind);
  wirelab_str wirelab_enforcement_outcome_label(uint32_t outcome);
  typedef struct
  {
    uint32_t abi_version;
    wirelab_abi_type str;
    wirelab_abi_type node;
    wirelab_abi_type link;
    wirelab_abi_type metric_sample;
    wirelab_abi_type mac_table;
    wirelab_abi_type port_state;
    wirelab_abi_type packet;
    wirelab_abi_type anomaly;
    wirelab_abi_type fault;
    wirelab_abi_type policy;
    wirelab_abi_type policy_action;
    wirelab_abi_type enforced_port;
    wirelab_abi_type report_row;
    wirelab_abi_type provenance;
  } wirelab_abi_layout_report;
  void wirelab_abi_layout(wirelab_abi_layout_report* out);