gui/src/ffi/raw.rs


    pub fn wirelab_backend_count() -> usize;
    pub fn wirelab_backend_name(index: usize) -> WirelabStr;
    pub fn wirelab_scenario_count() -> usize;
    pub fn wirelab_scenario_name(index: usize) -> WirelabStr;
    pub fn wirelab_anomaly_type_count() -> usize;
    pub fn wirelab_anomaly_type_name(index: usize) -> WirelabStr;
    pub fn wirelab_policy_action_name_count() -> usize;
    pub fn wirelab_policy_action_name(index: usize) -> WirelabStr;

    pub fn wirelab_node_type_label(node_type: u32) -> WirelabStr;
    pub fn wirelab_classification_label(classification: u32) -> WirelabStr;
    pub fn wirelab_validity_label(validity: u32) -> WirelabStr;
    pub fn wirelab_anomaly_type_label(anomaly_type: u32) -> WirelabStr;
    pub fn wirelab_policy_action_label(action: u32) -> WirelabStr;
    pub fn wirelab_enforcement_kind_label(kind: u32) -> WirelabStr;
    pub fn wirelab_enforcement_outcome_label(outcome: u32) -> WirelabStr;

    pub fn wirelab_abi_layout(out: *mut AbiLayoutReport);
}
